# pyodide-wasm-wheel-example

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-jupyterlite.txt  test.js  test.py  test_c.js  test_rust.js
.github/workflows/: build.yml  c-extension.yml  jupyterlite.yml  pyodide-build.yml  rust-extension.yml  test.yml
c-extension/: lib.c  pyproject.toml  setup.py
contents/: README.ipynb
cpp-extension/: CMakeLists.txt  pyproject.toml
cpp-extension/src/: main.cpp
jupyterlite/: pyproject.toml
jupyterlite/contents/: README.ipynb
rust-extension/: Cargo.toml  pyproject.toml  rust-toolchain.toml  test.py
rust-extension/src/: lib.rs
tests/: test_c.js  test_cpp.js  test_rust.js
