[project]
name = "pyodide-wasm-wheel-example"
description = "Example for Wasm wheel for Pyodide"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [ "Programming Language :: Python :: 3", ]
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
